[package]
name = "flf"
version = "0.1.0"
authors = ["Manfred Lotz <manfred.lotz@posteo.de>"]
description = "Find largest files in directory trees."
homepage = "https://github.com/manfredlotz/flf"
repository = "https://github.com/manfredlotz/flf"
keywords = ["search", "find"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }
clap_complete = "3.1.2"
humansize = "1.1.1"
litemap = "0.3.0"
walkdir = "2.3.2"
